2011-01-10  Kan-Ru Chen  <kanru@kanru.info>

	* src/view/telnetcon.cpp, src/view/telnetcon.h: Add IPv6
	support. Use getaddrinfo to resolve both AF_INET and AF_INET6
	addresses. Also support IPv6 address literal specified in RFC 3986
	section 3.2.2.
	* configure.ac: Add new checks.
	* NEWS: Document new features.

2010-10-26  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/core/termdata.cpp,
	src/core/termdata.h,
	src/core/termview.cpp: Using AttrType (short) to cast CTernCharAttr will
	cause a problem in copy-text-with-color with DBCS words.
	http://code.google.com/p/pcmanx-gtk2/issues/detail?id=20 by hrs113355
	* src/view/telnetview.cpp: Check crlf in pasting lines with color.
	http://code.google.com/p/pcmanx-gtk2/issues/detail?id=21 by hrs113355
	* debian/compat,
	debian/control,
	debian/copyright,
	debian/docs,
	debian/libpcmanx-core0.install,
	debian/mozilla-plugin-pcmanx.install,
	debian/mozilla-plugin-pcmanx.links,
	debian/pcmanx-gtk2.install,
	debian/rules: Add a rough debian folder.
	* build/snapshot-deb.sh: Polish deb packaging script.

2010-06-15  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* build/make-new-release.sh: Polish script.
	* build/snapshot-deb.sh: Fix some dependency problem.

2010-06-14  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* build/snapshot-deb.sh: Update Debian packaging script.

2010-05-12  Youchen Lee  <copyleft@utcr.org>

	* src/mainframe.cpp (CMainFrame::CMainFrame): Set the focus chain 
	for quick switching keyboard focus to the URL entry by Tab key.

2010-04-15  Jason Xia  <jasonxh@gmail.com>

	* src/downarticledlg.h, src/downarticledlg.cpp: Fix article download
	issue with bdwm.net. Also change the 'Cancel' button into a 'Stop'
	button so that if download gets stuck again, one can click 'Stop' to
	abort waiting while still being able save what has been downloaded.
	Previous 'Cancel' behavior can be achieved by pressing Esc or closing
	the download window.